--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "app.js",
 	"type": "commonjs",
 	"scripts": {
-		"start": "nodemon src/app.js"
+		"start": "nodemon src/app.js",
+		"dotenv": "cp .env.example .env"
 	},
 	"repository": "git@github.com:sourabhossain/SS-BACKEND-TASK--SOURAB-HOSSAIN.git",
 	"author": "Sourab Hossain <sourabhossain.fci@gmail.com>",
