DEV: #08 - Swagger Documentation

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"express": "^4.18.2",
 		"http-status": "^1.5.3",
 		"jwt-then": "^1.0.1",
-		"mongoose": "^6.6.5"
+		"mongoose": "^6.6.5",
+		"swagger-jsdoc": "^6.2.5",
+		"swagger-ui-express": "^4.6.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
